fix: 식당 검색API response 추가, userId 삭제